# rank-choicer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-release.yaml  deploy-test-release.yaml  test.yaml
src/rank_choicer/: __init__.py  elimination_strategy.py  rank_choice_counter.py  round_result.py
tests/: test_rank_choice_counter.py  test_round_result.py
