[tool.poetry]
name = "rank-choicer"
version = "0.1.0"
description = ""
authors = ["Frank Corso <frank@frankcorso.me>"]
readme = "README.md"
packages = [{include = "rank_choicer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
