[project]
name = "rank-choicer"
version = "0.1.2"
description = "A Python package for calculating the winner of a poll using rank choice voting (Instant-runoff voting)."
authors = [
    {name = "Frank Corso",email = "frank@frankcorso.me"}
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
keywords = [ "poll", "vote", "instant-runoff", "rank choice" ]
dependencies = [
]

[project.urls]
repository = "https://github.com/fpcorso/rank-choicer"


[tool.poetry]
packages = [{include = "rank_choicer", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
