[project]
name = "rank-choicer"
version = "1.0.1"
description = "A Python package for calculating the winner of a poll using rank choice voting (Instant-runoff voting)."
authors = [
    {name = "Frank Corso",email = "frank@frankcorso.me"}
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
keywords = [ "poll", "vote", "instant-runoff", "rank choice" ]
dependencies = [
]

[project.urls]
repository = "https://github.com/fpcorso/rank-choicer"


[tool.poetry]
packages = [{include = "rank_choicer", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
